--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
       <h1>{{ 'Really working? ' + 'Yes!!!' }}</h1>
 
-      <project-list></project-list>
+      <div ng-view class="page-container"></div>
 
     </div>
   </body>
