--- a/src/login/login.template.html
+++ b/src/login/login.template.html
@@ -5,7 +5,8 @@
       <p class="mb-5">Incorrect login or(and) password.</p>
     </div>
 
-    <form ng-submit="$ctrl.submitLogin($ctrl.loginForm)" novalidate>
+    <form name="loginForm" novalidate
+          ng-submit="loginForm.$valid && $ctrl.submitLogin($ctrl.loginForm)">
 
       <div class="form-group mb-20">
         <label>Email</label>
@@ -17,10 +18,13 @@
         <input type="password" ng-model="$ctrl.loginForm.password" class="form-control" required />
       </div>
 
-      <button type="submit" class="btn btn-primary mb-15 mr-15 ">Sign In</button>
-      <!-- <input type="submit" placeholder="Sign In" class="primary mb-15 mr-15" /> -->
+      <button type="submit" ng-disabled="!loginForm.$valid" class="btn btn-primary mb-15 mr-15 ">Sign In</button>
 
       <p>Do not have an account? <a href="/sign_up">Sign Up</a></p>
     </form>
+
+    {{ $ctrl.loginForm }}<br>
+    login form valid? - {{ loginForm.$valid }}
+
   </div>
 </div>
