--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
               <h1 class="mt-0 mb-5">Simple ToDo List</h1>
             </div>
             <div class="col-xs-3 text-right">
-              <button class="mb-5">Exit</button>
+              <logout></logout>
+              <!-- <button class="mb-5">Exit</button> -->
             </div>
           </div>
         </div>
