--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div ng-app="todolistApp" id="app">
+    <div ng-app="todoList" id="app">
 
       <header class="main-header">
         <div class="container pt-10 pb-5">
