add project service and component

--- a/src/project-list/project-list.template.html
+++ b/src/project-list/project-list.template.html
@@ -1,4 +1,4 @@
-<h1>TEMPLATE COOL</h1>
+<h1>project-list template</h1>
 
 <ul>
   <li ng-repeat="project in $ctrl.projects | orderBy:$ctrl.orderProp">
