--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -3,7 +3,7 @@
 <p>{{ $ctrl.project.name }}</p>
 <ul>
   <li ng-repeat="task in $ctrl.project.tasks">
-    {{ task.name }} from {{ $ctrl.project }}
+    {{ task.name }}
   </li>
 </ul>
 <br>
