--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -1,9 +1,8 @@
-<h3>PROJECT TEMPLATE</h3>
+<!-- <h3>PROJECT TEMPLATE</h3> -->
 
-<p>{{ $ctrl.project.name }}</p>
+<!-- <p>{{ $ctrl.project.name }}</p> -->
 <ul>
   <li ng-repeat="task in $ctrl.project.tasks">
     {{ task.name }}
   </li>
 </ul>
-<br>
