few changes to html

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,13 @@
         </div>
       </header>
 
-      <h1>{{ 'Really working? ' + 'Yes!!!' }}</h1>
 
-      <ui-view></ui-view>
+
+      <!-- <div class="page-container"> -->
+        <ui-view></ui-view>
+      <!-- </div> -->
+
+      <h5>{{ 'Really working? ' + 'Yes!!!' }}</h5>
 
     </div>
   </body>
