--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -1,8 +1,51 @@
 <!-- <h3>PROJECT TEMPLATE</h3> -->
 
 <!-- <p>{{ $ctrl.project.name }}</p> -->
-<ul>
-  <li ng-repeat="task in $ctrl.project.tasks">
-    {{ task.name }}
-  </li>
-</ul>
+
+
+    <!-- const TaskItem = () => ( -->
+      <!-- <div className="project-task">
+        <CheckboxField title="Buy bicycle on Toms birthday." className="flex-grow mb-0" extraInfo="23/02/2017" />
+        <div className="no-shrink pt-5">
+          <CommentModal />
+          <span className="align-middle d-inline-block mb-5">Date</span>
+          <span className="align-middle d-inline-block mb-5">Edit</span>
+          <DeleteModal />
+        </div>
+      </div> -->
+
+
+    <!-- const CheckboxField = ({ className, title, extraInfo }) => ( -->
+      <!-- <FormGroup className={className}>
+        <Checkbox
+          inline
+        >
+          <span>{ title }</span>
+          <div className="in-green-500 font-10">{ extraInfo }</div>
+        </Checkbox>
+      </FormGroup> -->
+
+
+
+  <div class="project-task" ng-repeat="task in $ctrl.project.tasks">
+    <div class="form-group flex-grow mb-0">
+      <label class="checkbox-inline">
+        <input type="checkbox" value="">{{ task.name }}
+      </label>
+      <!-- <input type="checkbox" name="" value="">
+      <span>Buy bicycle on Toms birthday.</span> -->
+      <div class="in-green-500 font-10">"23/02/2017"</div>
+    </div>
+    <div class="no-shrink pt-5">
+      <CommentModal />
+      <span class="align-middle d-inline-block mb-5">Date</span>
+      <span class="align-middle d-inline-block mb-5">Edit</span>
+      <DeleteModal />
+    </div>
+  </div>
+
+
+
+
+
+    <!-- {{ task.name }} -->
