modify project views

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
         </div>
       </header>
 
-
-
-      <!-- <div class="page-container"> -->
-        <ui-view></ui-view>
-      <!-- </div> -->
+      <div class="page-container">
+        <div class="container">
+          <ui-view></ui-view>
+        </div>
+      </div>
 
       <h5>{{ 'Really working? ' + 'Yes!!!' }}</h5>
 
