--- a/src/logout/logout.template.html
+++ b/src/logout/logout.template.html
@@ -1,1 +1,7 @@
-<button ng-click="$ctrl.logout()" class="mb-5">Exit</button>
+<a ng-click="$ctrl.logout()" href="#">
+  <span class="glyphicon glyphicon-log-out"></span>
+</a>
+
+<!-- <button ng-click="$ctrl.logout()" type="button" class="btn btn-default mb-5">
+  <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+</button> -->
