--- a/src/login/login.template.html
+++ b/src/login/login.template.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-8 sm-offset-2 md-6 md-offset-3">
     <h2>Sign In</h2>
-    <div class="alert-danger">
+    <div class="alert alert-danger">
       <p class="mb-5">Incorrect login or(and) password.</p>
       <div ng-repeat="error in $ctrl.errors">{{ error }}</div>
     </div>
@@ -10,13 +10,14 @@
           ng-submit="loginForm.$valid && $ctrl.submitLogin($ctrl.loginForm)">
 
       <div class="form-group mb-20">
-        <label>Email</label>
-        <input type="email" ng-model="$ctrl.loginForm.email" class="form-control" required />
+        <input type="email" ng-model="$ctrl.loginForm.email" class="form-control"
+                placeholder="Email" required />
       </div>
 
       <div class="form-group mb-20">
-        <label>Password</label>
-        <input type="password" ng-model="$ctrl.loginForm.password" class="form-control" required />
+
+        <input type="password" ng-model="$ctrl.loginForm.password" class="form-control"
+                placeholder="Password" required />
       </div>
 
       <button type="submit" ng-disabled="!loginForm.$valid" class="btn btn-primary mb-15 mr-15 ">Sign In</button>
