--- a/src/project-list/project-list.template.html
+++ b/src/project-list/project-list.template.html
@@ -1,6 +1,4 @@
-<!-- <h1>project-list template</h1> -->
-
-<div id="projects" class="row project-info__title">
+<div id="projects" class="row">
   <div class="col-sm-8 sm-offset-2">
     <h2>Projects</h2>
     <div class="alert-success mb-10">
@@ -8,21 +6,34 @@
     </div>
 
     <div class="project" ng-repeat="project in $ctrl.projects | orderBy:$ctrl.orderProp">
-      <!-- <a ui-sref="main.project({ projectId: project.id })">{{ project.name }}</a> -->
-      <a ui-sref-active="active" ng-click="$ctrl.setActiveProject(project.id)"
-        ui-sref="main.project({ projectId: project.id })">{{ project.name }}
-      </a>
-      <div ng-show="project.id === $ctrl.activeProjectId">
-        <ui-view ></ui-view>
-        <!-- <ul>
-          <li ng-repeat="task in project.tasks">
-            {{ task.name }}
-          </li>
-        </ul> -->
+      <!-- GONNA ADD SOON -->
+      <!-- <div className="project-edit">
+        <Form>
+          <TextField />
+          <Button bsStyle="primary" className="mb-5 mr-5">Save</Button>
+          <Button bsStyle="default" className="mb-5 mr-5" onClick={this.closeEdit}>Cancel</Button>
+        </Form>
+      </div> -->
+
+      <div class="project-info">
+        <div class="project-info__header">
+          <p class="project-info__title" ng-click="$ctrl.setActiveProject(project.id)"
+             ui-sref="main.project({ projectId: project.id })" ui-sref-active="active">
+            <span class="project-info__title-icon icon icon-arrow-up" />
+            {{ project.name }}
+          </p>
+          <div class="project-info__actions">
+            <span class="align-middle d-inline-block mb-5 mr-5" onClick="">Edit</span>
+            <!-- <DeleteModal /> TODO-->
+          </div>
+        </div>
+
+        <div class="project-info__body" ng-show="project.id === $ctrl.activeProjectId">
+          <ui-view ></ui-view>
+        </div>
       </div>
-      <br>
     </div>
-    <!-- <ProjectItem /> -->
+
     <!-- <CreateForm /> -->
   </div>
 </div>
