--- a/src/signup/signup.template.html
+++ b/src/signup/signup.template.html
@@ -1,30 +1,30 @@
 <div class="row">
   <div class="col-sm-8 sm-offset-2 md-6 md-offset-3">
     <h2>Sign Up</h2>
-    <div class="alert-success">
+    <div class="alert alert-success mb-10">
       <p class="mb-5"><strong>Well done!</strong> You have successfully registered.</p>
     </div>
 
-    <div class="alert-danger">
-      <p className="mb-5">Incorrect login or(and) password.</p>
+    <div class="alert alert-danger">
+      <p class="mb-5">Incorrect login or(and) password.</p>
     </div>
 
     <form name="signupForm" novalidate
           ng-submit="signupForm.$valid && $ctrl.submitSignup($ctrl.signupForm)">
 
       <div class="form-group mb-20">
-        <label>Email</label>
-        <input type="email" ng-model="$ctrl.signupForm.email" class="form-control" required />
+        <input type="email" ng-model="$ctrl.signupForm.email" class="form-control"
+               placeholder="Email" required />
       </div>
 
       <div class="form-group mb-20">
-        <label>Password</label>
-        <input type="password" ng-model="$ctrl.signupForm.password" class="form-control" required />
+        <input type="password" ng-model="$ctrl.signupForm.password" class="form-control"
+               placeholder="Password" required />
       </div>
 
       <div class="form-group mb-20">
-        <label>Confirm Password</label>
-        <input type="password" ng-model="$ctrl.signupForm.password_confirmation" class="form-control" required />
+        <input type="password" ng-model="$ctrl.signupForm.password_confirmation"
+               placeholder="Confirm Password" class="form-control" required />
       </div>
 
       <button type="submit" ng-disabled="!signupForm.$valid" class="btn btn-primary mb-15 mr-15 ">Sign Up</button>
