start to add modal component

--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -17,6 +17,7 @@
       </p>
       <div class="project-info__actions">
         <span class="align-middle d-inline-block mb-5 mr-5" onClick="">Edit</span>
+        <span class="align-middle d-inline-block mb-5 mr-5" ng-click="$ctrl.delete($ctrl.project)">Del</span>
         <!-- <DeleteModal /> TODO-->
       </div>
     </div>
