--- a/src/create-project-form/create-project-form.template.html
+++ b/src/create-project-form/create-project-form.template.html
@@ -11,7 +11,7 @@
       Create Project
     </button>
 
-    <button ng-click="$ctrl.resetForm()" class="btn btn-default mb-15 mr-15 ">
+    <button type="button" ng-click="$ctrl.resetForm()" class="btn btn-default mb-15 mr-15 ">
       Cancel
     </button>
   </div>
