add taskService and add task functionality

--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="project-info__body" ng-show="$ctrl.state.open">
-      <task-list tasks="$ctrl.project.tasks"></task-list>
+      <task-list tasks="$ctrl.project.tasks" project-id="$ctrl.project.id"></task-list>
     </div>
   </div>
 </div>
