--- a/src/create-task-form/create-task-form.template.html
+++ b/src/create-task-form/create-task-form.template.html
@@ -1,22 +1,18 @@
 <form name="$ctrl.createTaskForm" novalidate
     ng-submit="$ctrl.createTaskForm.$valid && $ctrl.submitCreate()">
-  <div class="mb-20">
-    <div class="form-group">
-      <input ng-model="$ctrl.taskName" type="text" class="form-control" placeholder="Enter task Name..."
+    <input ng-model="$ctrl.taskName" type="text" class="project-task-edit-field form-control"
+      placeholder="Enter Task Name..."
       ng-focus="$ctrl.state.showButtons = true" required />
-    </div>
-  </div>
-  <div ng-show="$ctrl.state.showButtons">
-    <button type="submit" ng-disabled="!$ctrl.createTaskForm.$valid" class="btn btn-primary mb-15 mr-15 ">
-      Create Task
+  <!-- <div class="divider" /> -->
+  <div class="project-task-edit-btn" ng-show="$ctrl.state.showButtons">
+    <button type="submit" ng-disabled="!$ctrl.createTaskForm.$valid" class="btn btn-info mb-5 mr-15 ">
+      Add Task
     </button>
-
-    <button type="button" ng-click="$ctrl.resetForm()" class="btn btn-default mb-15 mr-15 ">
+    <button type="button" ng-click="$ctrl.resetForm()" class="btn btn-default mb-5 mr-15 ">
       Cancel
     </button>
   </div>
-
 </form>
 
-form valid? - {{ $ctrl.createTaskForm.$valid }}<br>
-{{ $ctrl.taskName }}
+<!-- form valid? - {{ $ctrl.createTaskForm.$valid }}<br>
+{{ $ctrl.taskName }} -->
