--- a/src/project-list/project-list.template.html
+++ b/src/project-list/project-list.template.html
@@ -7,8 +7,7 @@
 
   <div class="col-sm-8 sm-offset-2">
     <project ng-repeat="project in $ctrl.projects | orderBy:$ctrl.orderProp"
-             project="project" on-delete="$ctrl.deleteProject(project)">
-    </project>
+             project="project" on-delete="$ctrl.deleteProject(project)"></project>
     <create-project-form on-create="$ctrl.createProject(project)"></create-project-form>
   </div>
 </div>
