--- a/src/task/task.template.html
+++ b/src/task/task.template.html
@@ -1,12 +1,15 @@
 <div class="project-task">
-  <label class="checkbox-inline">
-    <input type="checkbox" value="">{{ $ctrl.task.name }}
-    <div class="in-green-500 font-10">"23/02/2017"</div>
-  </label>
+  <form class="flex-grow mb-0">
+    <label class="checkbox-inline">
+      <input type="checkbox" value="">{{ $ctrl.task.name }}
+      <div class="in-green-500 font-10">"23/02/2017"</div>
+    </label>
+  </form>
   <div class="no-shrink pt-5">
     <!-- <CommentModal /> -->
     <span class="align-middle d-inline-block mb-5">Date</span>
     <span class="align-middle d-inline-block mb-5">Edit</span>
+    <span ng-click="$ctrl.delete()" class="align-middle d-inline-block mb-5">Del</span>
     <!-- <DeleteModal /> -->
   </div>
 </div>
