--- a/src/task/task.template.html
+++ b/src/task/task.template.html
@@ -1,15 +1,28 @@
-<div class="project-task">
+<div class="project-task-edit" ng-show="$ctrl.state.edit">
+  <form name="$ctrl.editTaskForm" novalidate
+    ng-submit="$ctrl.editTaskForm.$valid && $ctrl.submitEdit()">
+    <input ng-model="$ctrl.task.name" type="text" class="project-task-edit-field mb-10 form-control" required />
+    <div class="project-task-edit-btn">
+      <button type="submit" ng-disabled="!$ctrl.editTaskForm.$valid || $ctrl.editTaskForm.$pristine"
+              class="btn btn-info mb-15 mr-15">Save</button>
+      <button type="button" class="btn btn-default mb-15 mr-15" ng-click="$ctrl.cancelEdit()">Cancel</button>
+    </div>
+  </form>
+</div>
+
+<div class="project-task" ng-hide="$ctrl.state.edit">
   <form class="flex-grow mb-0">
     <label class="checkbox-inline">
-      <input type="checkbox" value="">{{ $ctrl.task.name }}
+      <input type="checkbox" value="">
+      {{ $ctrl.task.name }}
       <div class="in-green-500 font-10">"23/02/2017"</div>
     </label>
   </form>
   <div class="no-shrink pt-5">
     <!-- <CommentModal /> -->
     <span class="align-middle d-inline-block mb-5">Date</span>
-    <span class="align-middle d-inline-block mb-5">Edit</span>
-    <span ng-click="$ctrl.delete()" class="align-middle d-inline-block mb-5">Del</span>
+    <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.toggleEdit()">Edit</span>
+    <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.delete()">Del</span>
     <!-- <DeleteModal /> -->
   </div>
 </div>
