add change priority - different methods

--- a/src/task-list/task-list.template.html
+++ b/src/task-list/task-list.template.html
@@ -1,5 +1,6 @@
 <task ng-repeat="task in $ctrl.tasks | orderBy:$ctrl.orderProp"
-      task="task" on-delete="$ctrl.deleteTask(task)" on-toggle-done="$ctrl.toggleDone(task)">
+      task="task" on-delete="$ctrl.deleteTask(task)" on-toggle-done="$ctrl.toggleDone(task)"
+      on-change-priority="$ctrl.refreshTasks()">
 </task>
 
 <create-task-form project-id="$ctrl.projectId" on-create="$ctrl.createTask(task)"></create-task-form>
