add comment component skeleton

--- a/src/task/task.template.html
+++ b/src/task/task.template.html
@@ -28,7 +28,8 @@
     </label>
   </form>
   <div class="no-shrink pt-5 project-task-actions">
-    <!-- <CommentModal /> -->
+    <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.comments()">
+      Com</span>
     <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.setDeadline()">
       Ddln</span>
     <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.toggleEdit()">Edit</span>
