--- a/src/project/project.template.html
+++ b/src/project/project.template.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="project-info__body" ng-show="$ctrl.state.open">
-      <task-list tasks="$ctrl.project.tasks" project-id="$ctrl.project.id" on-update="$ctrl.checkAllDone()"></task-list>
+      <task-list tasks="$ctrl.project.tasks" project-id="$ctrl.project.id" on-update="$ctrl.checkAllDone(tasks)"></task-list>
     </div>
   </div>
 </div>
